# margin

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  lefthook.yml  release-please-config.json  rustfmt.toml
.github/workflows/: ci.yml  release.yml
docs/sparc/: Architecture.md  Specification.md
resources/: heap.entitlements
script/: bundle-mac
src/: lib.rs  main.rs
src/app/: actions.rs  events.rs  mod.rs  state.rs
src/config/: mod.rs  settings.rs
src/domain/: account.rs  contact.rs  email.rs  label.rs  mod.rs  screener.rs  thread.rs  types.rs
src/embedding/: engine.rs  mod.rs  models.rs  vector_store.rs
src/providers/: mod.rs
src/providers/ai/: anthropic.rs  mod.rs  ollama.rs  openai.rs  traits.rs
src/providers/email/: gmail.rs  imap.rs  mod.rs  traits.rs
src/services/: account_service.rs  ai_service.rs  contact_service.rs  email_service.rs  label_service.rs  mod.rs  notification_service.rs  screener_service.rs  smart_view_service.rs  snooze_service.rs  stats_service.rs  sync_service.rs  telemetry_service.rs  thread_service.rs
src/storage/: database.rs  keychain.rs  mod.rs  schema.rs
src/storage/queries/: accounts.rs  contacts.rs  emails.rs  labels.rs  mod.rs  screener.rs  threads.rs
src/ui/: accessibility.rs  keybindings.rs  mod.rs  theme.rs
src/ui/components/: avatar.rs  badge.rs  button.rs  icon.rs  list.rs  mod.rs  notifications.rs  tooltip.rs
src/ui/views/: command_palette.rs  composer.rs  main_window.rs  message_list.rs  mod.rs  reading_pane.rs  settings.rs  settings_panel.rs  sidebar.rs  stats.rs
tests/: service_integration.rs
