[package]
name = "heap"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "A keyboard-driven, AI-augmented email client"
repository = "https://github.com/panbanda/heap"
authors = ["Jonathan Reyes <me@jonathanreyes.com>"]
rust-version = "1.75"

[dependencies]
# UI Framework
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
bytes = "1"

# Email protocols
async-imap = "0.10"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "builder", "smtp-transport", "hostname"] }
mailparse = "0.15"
mail-parser = "0.9"

# ML inference
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"
hf-hub = "0.3"

# Credential storage
keyring = "3"

# Encryption
ring = "0.17"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
webpki-roots = "0.26"

# OAuth
oauth2 = "4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
directories = "5"
lru = "0.12"
base64 = "0.22"

[features]
default = []
keychain-integration-tests = []

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
mockall = "0.13"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3

# macOS App Bundle Configuration
[package.metadata.bundle]
name = "The Heap"
identifier = "com.panbanda.heap"
icon = ["resources/app-icon@2x.png", "resources/app-icon.png"]
copyright = "Copyright (c) 2024 Panbanda. All rights reserved."
category = "public.app-category.productivity"
short_description = "A keyboard-driven, AI-augmented email client"
osx_minimum_system_version = "10.15"
osx_info_plist_exts = ["resources/info/*"]
